--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Portfolio of Christian Hizon. He worked on several development projects, taught students, and collaborated with talented people to create applications for both business and consumer use. I'm quietly confident, naturally curious and perpetually working on improving my skills as a developer.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
